--- a/CSD213 Test2B.html (1)/CSD213 Test2B.html
+++ b/CSD213 Test2B.html (1)/CSD213 Test2B.html
@@ -1,7 +1,13 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-  <style>
+  <title>Test2B – My Portfolio</title>
+ <meta charset="UTF-8" />
+ <meta name="description" content="A simple dinner reservation form that allows users to enter their name, phone number, select a time slot, and choose meal preferences." />
+ <meta name="author" content="Sakshi" />
+ <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+ <meta name="keywords" content="HTML, CSS, JavaScript, Test2B" />
+<style>
     table {
       text-align: center;
       margin-left: 10%;
